# status_code_checker

./: .pre-commit-config.yaml  README.md  makefile  pyproject.toml
src/status_code_checker/: __init__.py  __main__.py  status_code_checker.py
src/statuscodechecker/: __main__.py  __main__.py.old  formatter.py  status_code_checker.py  status_codes.py
tests/: test_main.py  test_main.py.old  test_status_explainer.py
